# igc-rs

./: Cargo.toml
src/: lib.rs
src/records/: a_record.rs  b_record.rs  c_record.rs  d_record.rs  e_record.rs  extension.rs  f_record.rs  g_record.rs  h_record.rs  i_record.rs  j_record.rs  k_record.rs  l_record.rs  mod.rs
src/util/: coord.rs  datetime.rs  display_option.rs  parse_error.rs
