[package]
name = "igc"
description = "A fast, minimal parser for IGC flight recorder files"
version = "0.2.2"
authors = ["Joe Roberts <joe@jwjr.co.uk>"]
repository = "https://github.com/Joey9801/igc-rs"
documentation = "https://docs.rs/igc"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
heapless = { version = "0.8.0", optional = true }
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
approx = "0.5.0"
criterion = "0.3.4"
encoding = "0.2.33"
proptest = "1.0.0"
serde_json = "1.0.64"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
heapless = ["dep:heapless"]
serde = ["dep:serde", "heapless/serde"]